--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0">
+	<!-- <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0"> -->
         <title>寒夜导航_新一代安全上网导航</title>
         <link rel="dns-prefetch" href="//s1.qhimg.com"/>
         <meta name="description" content="寒夜导航--新一代安全上网导航，为用户提供门户、新闻、视频、游戏、小说、彩票等各种分类的优秀内容和网站入口，提供最简单便捷的上网导航服务。安全上网，从网址导航开始。" />
