--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
+<!DOCTYPE html>
 <html>
+  
 <script type="text/javascript">
 document.write('<meta http-equiv="refresh" content="0;url=http://coldnight.xyz/">');
 </script>
