--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   
 <script type="text/javascript">
-document.write('<meta http-equiv="refresh" content="0;url=http://hanye.asia/">');
+document.write('<meta http-equiv="refresh" content="0;url=http://cnsfilm.xyz/">');
 </script>
 </body>
 </html>
