--- a/rss.html
+++ b/rss.html
@@ -2,7 +2,7 @@
 <html>
   
 <script type="text/javascript">
-document.write('<meta http-equiv="refresh" content="0;url=http://hanye.asia/tools/rss">');
+document.write('<meta http-equiv="refresh" content="0;url=http://cnsfilm.xyz/tools/rss">');
 </script>
 </body>
 </html>
