--- a/control/test.html
+++ b/control/test.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <HTML>
   <BODY>
-    <iframe src="http://hanye.asia" height="100%" width="100%" ></iframe>
+    <iframe src="http://cnsfilm.xyz" height="100%" width="100%" ></iframe>
   </BODY>
 </HTML>
